--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SimpleToDo</string>
-    <string name="add_button">Add</string>
+    <string name="add_button">Add!!</string>
     <string name="add_text">Add New Item</string>
     <string name="enter_input_text">Enter Todo Item</string>
     <string name="cancel">Cancel</string>
