WIP.  Implementing use of cursor adapter and sqlite.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="add_text">Add New Item</string>
     <string name="enter_input_text">Enter Todo Item</string>
     <string name="cancel">Cancel</string>
+    <string name="enter_priority">Enter Priority</string>
 </resources>
